# gc_hackaton_2022

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: entities.h  textures.h
src/: CMakeLists.txt  entities.c  main.c  textures.c
